manifests/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    alertmanager: main
  name: alertmanager-main
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9093
    targetPort: 9093
  selector:
    alertmanager: main
    app: alertmanager
  sessionAffinity: ClientIP
