manifests/ingress-alertmanager.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-main
  namespace: monitoring
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`alertmanager.gower.cloud`)
    services:
    - name: alertmanager-main
      port: 9093
  tls:
    secretName: gower-cloud-cert
