manifests/ingress-grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.gower.cloud`)
    services:
    - name: grafana
      port: 3000
  tls:
    secretName: gower-cloud-cert
