manifests/ingress-prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`prometheus.gower.cloud`)
    services:
    - name: prometheus-k8s
      port: 9090
  tls:
    secretName: gower-cloud-cert
